Fixed the hero collapse issue

--- a/src/sass/pages/index.scss
+++ b/src/sass/pages/index.scss
@@ -12,30 +12,6 @@
     align-items: center; 
     width: 75%; 
     
-    .fake-book { 
-        width: 200px; 
-        
-        color: $primary-color; 
-        font-family: $paragraph-font; 
-        text-shadow: 1px 1px 2px black;
-
-        background: 
-            // linear-gradient($hero-img-filter, $hero-img-filter), 
-            url($book-cover-url); 
-        background-size: cover; 
-        background-position: center; 
-        
-        @include d-flex-center(); 
-        flex-direction: column; 
-        justify-content: flex-end; 
-        
-        padding-bottom: $padding-margin-base; 
-
-        height: 300px;
-        margin-right: auto; 
-        border-radius: 10px; 
-    }
-
     @media (max-width: $large-devices) {       
         width: 100%; 
     }
@@ -43,11 +19,6 @@
     @media (max-width: $medium-devices) {
         flex-direction: column; 
         align-items: center; 
-        
-        .fake-book { 
-            margin-right: 0; 
-            margin-bottom: $padding-margin-base; 
-        }
 
         .hero-text { 
             @include flex-column(); 
